<resources>
    <string name="app_name">To Do List</string>
    <string name="text_header">text_header</string>
    <string name="Add_card">+ Add a card</string>
    <string name="title">Enter a title for this card...</string>
    <string name="add_card">Add Card...</string>
    <string name="copy_list">Copy List...</string>
    <string name="move_list">Move List...</string>
    <string name="watch">Watch</string>
    <string name="sort_by">Sort By...</string>
    <string name="move_cards">Move All Cards in This List...</string>
    <string name="archive_cards">Archive All Cards in This List...</string>
    <string name="archive">Archive This List</string>
</resources>
